[gd_scene load_steps=10 format=2]

[ext_resource path="res://scenes/Player.gd" type="Script" id=1]
[ext_resource path="res://scenes/DropProjectile.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/GoldenDropProjectile.tscn" type="PackedScene" id=3]

[sub_resource type="CapsuleShape" id=1]
radius = 0.828941
height = 2.31526

[sub_resource type="CapsuleShape" id=2]
radius = 1.00265
height = 2.15413

[sub_resource type="CapsuleShape" id=3]
radius = 0.97241
height = 2.27773

[sub_resource type="Animation" id=4]
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("AnimationPlayer/HurtTint:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimationPlayer/HurtTint:color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 0, 0, 0.658824 ), Color( 1, 0, 0, 0 ) ]
}

[sub_resource type="SphereShape" id=5]
radius = 0.720984

[sub_resource type="BoxShape" id=6]
extents = Vector3( 2.62222, 2.70463, 1.74083 )

[node name="Player" type="KinematicBody" groups=[
"Player",
]]
script = ExtResource( 1 )
drop_projectile = ExtResource( 2 )
golden_drop_projectile = ExtResource( 3 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0 )
shape = SubResource( 1 )

[node name="Camera" type="Camera" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.40779, 0 )
current = true
far = 600.0

[node name="Hurtbox" type="Area" parent="."]
visible = false
collision_layer = 0
collision_mask = 16

[node name="CollisionShape" type="CollisionShape" parent="Hurtbox"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0 )
shape = SubResource( 2 )

[node name="PickupBox" type="Area" parent="."]
visible = false
collision_layer = 4
collision_mask = 4

[node name="CollisionShape" type="CollisionShape" parent="PickupBox"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0 )
shape = SubResource( 3 )

[node name="StunTimer" type="Timer" parent="."]
wait_time = 0.6
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Hurt = SubResource( 4 )

[node name="HurtTint" type="ColorRect" parent="AnimationPlayer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 1, 0, 0, 0.243137 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Feet" type="Area" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1.40332, 0 )
monitorable = false
collision_layer = 0
collision_mask = 2

[node name="CollisionShape" type="CollisionShape" parent="Feet"]
shape = SubResource( 5 )

[node name="PlantLooker" type="Area" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -3.47314 )
monitorable = false
collision_layer = 0
collision_mask = 1024

[node name="CollisionShape" type="CollisionShape" parent="PlantLooker"]
shape = SubResource( 6 )

[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]
[connection signal="area_entered" from="PickupBox" to="." method="_on_PickupBox_area_entered"]
[connection signal="timeout" from="StunTimer" to="." method="_on_StunTimer_timeout"]
